Modify type of container for display output values

--- a/simulation.html
+++ b/simulation.html
@@ -173,42 +173,42 @@
     <div class="combined">
     <div id="displayInputs">
         <h2><u>Initial Sugar Concentrations</u></h2>
-        <div class="lactoseExterior"><p>Lactose Exterior:</p><div id="lacExInput"></div></div>
+        <div class="lactoseExterior"><p>Lactose Exterior:</p><span id="lacExInput"></span></div>
         <br>
-        <div class="glucose"><p>Glucose:</p>&nbsp;<div id="gluInput"></div></div>
+        <div class="glucose"><p>Glucose:</p>&nbsp;<span id="gluInput"></span></div>
         <br>
-        <div class="lactoseInterior"><p>Lactose Interior:</p><div id="lacInInput"></div></div>
+        <div class="lactoseInterior"><p>Lactose Interior:</p><span id="lacInInput"></span></div>
         <br>
-        <div class="lactoseAllo"><p>Lactose Allolactose:</p><div id="lacAlInput"></div></div>
+        <div class="lactoseAllo"><p>Lactose Allolactose:</p><span id="lacAlInput"></span></div>
     </div>
     <div>
         <h2><u>Lactose Operon</u></h2>
-        <div class="promoter"><p>Promoter:</p>&nbsp;<div id="prom"></div></div>
+        <div class="promoter"><p>Promoter:</p>&nbsp;<span id="prom"></span></div>
         <br>
-        <div class="operator"><p>Operator:</p>&nbsp;<div id="oper"></div></div>
+        <div class="operator"><p>Operator:</p>&nbsp;<span id="oper"></span></div>
         <br>
-        <div class="repressor"><p>Repressor:</p>&nbsp;<div id="rep"></div> </div>
+        <div class="repressor"><p>Repressor:</p>&nbsp;<span id="rep"></span> </div>
         <br>
-        <div class="permease"><p>Permease:</p>&nbsp;<div id="perm"></div> </div>
+        <div class="permease"><p>Permease:</p>&nbsp;<span id="perm"></span> </div>
         <br>
-        <div class="betaGal"><p>Beta-Galactosidase:</p><div id="bGal"></div> </div>
+        <div class="betaGal"><p>Beta-Galactosidase:</p><span id="bGal"></span> </div>
         <br>
-        <div class="CAP"><p>CAP-cAMP:</p><div id="CAPCAMP"></div> </div>
+        <div class="CAP"><p>CAP-cAMP:</p><span id="CAPCAMP"></span> </div>
         <br>
-        <div class="plasmid"><p>Plasmid:</p>&nbsp;<div id="plas"></div> </div>
+        <div class="plasmid"><p>Plasmid:</p>&nbsp;<span id="plas"></span> </div>
         
     </div>
     <div id="plasmidInputs">
         <h2><u>Plasmid Lactose Operon</u></h2>
-        <div class="promoter"><p>Promoter:</p>&nbsp;<div id="prom2"></div></div>
+        <div class="promoter"><p>Promoter:</p>&nbsp;<span id="prom2"></span></div>
         <br>
-        <div class="operator"><p>Operator:</p>&nbsp;<div id="oper2"></div></div>
+        <div class="operator"><p>Operator:</p>&nbsp;<span id="oper2"></span></div>
         <br>
-        <div class="repressor"><p>Repressor:</p>&nbsp;<div id="rep2"></div> </div>
+        <div class="repressor"><p>Repressor:</p>&nbsp;<span id="rep2"></span> </div>
         <br>
-        <div class="permease"><p>Permease:</p>&nbsp;<div id="perm2"></div> </div>
+        <div class="permease"><p>Permease:</p>&nbsp;<span id="perm2"></span> </div>
         <br>
-        <div class="betaGal"><p>Beta-Galactosidase:</p><div id="bGal2"></div> </div>
+        <div class="betaGal"><p>Beta-Galactosidase:</p><span id="bGal2"></span> </div>
     </div>
     </div>
 
