--- a/about.html
+++ b/about.html
@@ -1,23 +1,66 @@
 <!DOCTYPE html>
+
+<!-- Authors : Gina Philipose, Rena Ahn, Zachary Mullen
+HTML File : about.html
+Last Update : August 29th, 2024 -->
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LacOp Simulation</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" type="text/css" href="css/about.css">
 </head>
 <body>
     <div class="header">
         <br>
         <h1>LacOp</h1>
-        <a href="simulation.html"><button><h3>Simulation</h3></button></a>
+        <a href="index.html"><button><h3>Simulation</h3></button></a>
         <a href="tutorial.html"><button><h3>Tutorial</h3></button></a>
         <a href="about.html"><button><h3>About</h3></button></a>
     </div> 
     <br>
 
-    <h3>What this sim is for/teaching students</h3>
+    <div class="about">
+        <h2>Lacop:</h2>
+        <p>Lacop was made to create a tool for students to learn more about lac operons through an interactive 
+            simulation. The current version was created Summer 2024.</p>
+        <h2>Contributors and alumni:</h2>
 
+        <h3><u>Old Version:</u></h3>
+        <p><b>Robert Rutherford</b>, <i>PhD.</i></p>
+        <p><b>Richard Charczenko:</b> <i>Seattle University, Cell and Molecular/BioChemistry/Computer Science Undergraduate</i>
+        <br>
+        <b>Sam Levy:</b> <i>Seattle University Alum 2018 Cell and Molecular Biology program</i>
+        <br>
+        <b>Jeremy Bjelajac:</b> <i>Seattle University Alum 2018 Cell and Molecular Biology Program</i>
+        <br>
+        <b>Nicolas Garcia:</b> <i>Seattle University Alum 2018 Cell and Molecular Biology Program</i>
+        </p>
+
+        <h3><u>Current Version:</u></h3>
+
+        <p><u>Seattle University Biology Department:</u></p>
+        <p><b>Robert Rutherford</b>, <i>PhD.</i></p>
+        <!-- waiting on: -->
+        <p><b>Sam</b>, <i>_____</i></p>
+        <p><b>Midge</b>, <i>_____</i></p>
+
+        <p><u>Seattle University Computer Science Department:</u></p>
+        <p><b>Nate Kremer-Herman</b>, <i>PhD.</i></p>
+        <p>
+        <b>Zachary Mullen:</b> <i>Seattle University Computer Science Undergraduate</i>
+        <br>
+        <b>Rena Ahn:</b> <i>Seattle University Computer Science Undergraduate</i>
+        <br>
+        <b>Gina Philipose:</b> <i>Seattle University Computer Science and Computer Engineering Undergraduate</i>
+        </p>
+        
+        <h2>Contact:</h2>
+        <a href="https://www.seattleu.edu/directory/profiles/robert-rutherford-phd.php">Professor Rutherford</a>
+        <br>
+        <a href="https://www.seattleu.edu/directory/profiles/nate-kremer-herman.php">Professor Kremer-Herman</a>
+    </div>
     <script src="scripts.js"></script>
 </body>
 </html>
