Updated info about.html

--- a/about.html
+++ b/about.html
@@ -43,17 +43,17 @@ Last Update : August 29th, 2024 -->
         <p><u>Seattle University Biology Department:</u></p>
         <p><b>Robert Rutherford</b>, <i>PhD.</i></p>
         <!-- waiting on: -->
-        <p><b>Sam</b>, <i>_____</i></p>
+        <p><b>Sam Nouwens</b>, <i>Cell and Molecular Biology</i></p>
         <p><b>Midge</b>, <i>_____</i></p>
 
         <p><u>Seattle University Computer Science Department:</u></p>
         <p><b>Nate Kremer-Herman</b>, <i>PhD.</i></p>
         <p>
-        <b>Zachary Mullen:</b> <i>Seattle University Computer Science Undergraduate</i>
+        <b>Zachary Mullen</b>, <i>Seattle University Computer Science Undergraduate</i>
         <br>
-        <b>Rena Ahn:</b> <i>Seattle University Computer Science Undergraduate</i>
+        <b>Rena Ahn</b>, <i>Seattle University Computer Science Undergraduate</i>
         <br>
-        <b>Gina Philipose:</b> <i>Seattle University Computer Science and Computer Engineering Undergraduate</i>
+        <b>Gina Philipose</b>, <i>Seattle University Computer Science and Computer Engineering Undergraduate</i>
         </p>
         
         <h2>Contact:</h2>
